[SkillFacatory2035-322] fix z-index position for user dropdown menu in the header

--- a/lms/static/sass/partials/lms/theme/blocks/_header.scss
+++ b/lms/static/sass/partials/lms/theme/blocks/_header.scss
@@ -74,6 +74,7 @@ header.global-header {
 
             .dropdown-user-menu {
                 top: 74px;
+                z-index: 20;
 
                 .dropdown-item a {
                     box-sizing: border-box;
